Kubernetes/node-exporter.yml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus-node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
      nodePort: 30100
